--- a/BaseInputAdapter/build.gradle
+++ b/BaseInputAdapter/build.gradle
@@ -42,6 +42,6 @@ dependencies {
 
     implementation 'com.contrarywind:Android-PickerView:4.1.8'
 
-    //implementation 'com.github.zhangke3016:MultilevelTreeList:1.0.2'
+    implementation 'com.github.zhangke3016:MultilevelTreeList:1.0.2'
 
 }
