--- a/BaseInputAdapter/build.gradle
+++ b/BaseInputAdapter/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.github.wangpengk1.XAOP:xaop-runtime:1.0.0'
+    implementation 'com.github.xuexiangjys.XAOP:xaop-runtime:1.1.0'
 
     implementation  'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
 
